# ASTra

./: .gitignore  CMakeLists.txt  README.md
.claude/: settings.local.json
apps/gf_toolsuite_gui/: CMakeLists.txt
apps/gf_toolsuite_gui/src/: AddGameDialog.cpp  DocumentLifecycle.hpp  GameLibrary.cpp  GameSelectorWindow.cpp  GuiSettings.hpp  MainWindow.cpp  MainWindow.cpp.orig  MainWindow.hpp  NameCache.cpp  TextEditorWindow.cpp  main.cpp
cmake/: gf_version.cmake
libs/: CMakeLists.txt
libs/gf_apt/src/: apt_reader.cpp  apt_renderer.cpp
libs/gf_core/: CMakeLists.txt
libs/gf_core/src/: AstArchive.cpp  AstContainerEditor.cpp  config.cpp  safe_write.cpp
libs/gf_models/: CMakeLists.txt
libs/gf_textures/: CMakeLists.txt
libs/gf_textures/src/: dds_decode.cpp  ea_dds_rebuild.cpp  xbox360_xpr2_untile.cpp  xpr2_rebuild.cpp
out-win/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  compile_commands.json
out-win/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
out-win/Testing/Temporary/: CTestCostData.txt
out-win/apps/: cmake_install.cmake
out-win/apps/gf_cli/: cmake_install.cmake
out-win/apps/gf_toolsuite_gui/: cmake_install.cmake
out-win/libs/: cmake_install.cmake
out-win/libs/gf_apt/: cmake_install.cmake
out-win/libs/gf_core/: cmake_install.cmake
out-win/libs/gf_models/: cmake_install.cmake
out-win/libs/gf_platform_ps3/: cmake_install.cmake
out-win/tests/: CTestTestfile.cmake  cmake_install.cmake
out-win/tests/unit/: CTestTestfile.cmake  (+1 more)
tests/unit/: CMakeLists.txt  test_dds_validate.cpp
(+24 files in other folders)
